# Image-Labeling-Tool

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  README.md
BBox_Annotator/: CMakeLists.txt  bbox_annotator.cpp  bbox_annotator.hpp
Seg_Annotator/: CMakeLists.txt  seg_annotator.cpp  seg_annotator.hpp
demo/: label.csv
